syntax = "proto3";
option go_package = "github.com/Emon331046/grpcDemo/helloToDemo";
package grpcDemo;
// The greeting service definition.

service Greeter {
  // Sends a greeting
  rpc SayHelloToDemo (HelloRequest) returns (HelloReply) {}

}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
